Add missing preview feature checks to some java hints
Some hints didn't check if the feature was supported by the source
version / preview flag combination.